# wallet

./: .gitignore  .gitmodules  AGENTS.md  README.md  justfile  shell.nix
.github/: dependabot.yml  docker-bake.hcl
.github/actions/setup-android-ci/: action.yml
.github/actions/setup-ios-ci/: action.yml
.github/actions/setup-rust-ci/: action.yml
.github/workflows/: android-ci.yml  android-reproducible.yml  core-ci.yml  core-diesel.yml  core-lint.yml  dynode-docker.yml  dynode-publish.yml  ios-ci.yml  ios-ui-tests.yml  publish-containers.yml  release_on_tag.yml
android/: build.gradle.kts  justfile  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/blockchain/: build.gradle.kts  proguard-rules.pro
android/data/coordinators/: build.gradle.kts
android/data/repositories/: build.gradle.kts
android/fdroid-build/: env.sh  init.sh
android/fdroid-build/metadata/: com.gemwallet.android.yml
android/features/settings/: build.gradle.kts
android/flavors/fcm/: build.gradle.kts
android/flavors/google-review/: build.gradle.kts
android/flavors/pushes-stub/: build.gradle.kts
android/gemcore/: build.gradle.kts  proguard-rules.pro
android/gemstone/: build.gradle.kts
android/gradle/: channels.gradle.kts  libs.versions.toml
android/reproducible/: README.md  build-apk.sh  ci-verify.sh  env.sh  sign-apk.sh  verify.sh  versions.sh
android/skills/: development-commands.md  setup.md  testing.md  troubleshooting.md
android/ui/: build.gradle.kts
android/ui-models/: build.gradle.kts
core/: Cargo.toml  Dockerfile  README.md  Settings.yaml  justfile
core/crates/defi/: Cargo.toml
core/crates/defi/src/: client.rs  config.rs  factory.rs  lib.rs  provider.rs  provider_client.rs
core/crates/defi/src/providers/: mod.rs
core/crates/defi/src/providers/debank/: client.rs  mod.rs  provider.rs
core/crates/defi/src/providers/jupiter/: client.rs  mapper.rs  mod.rs  model.rs  provider.rs
core/crates/defi/src/providers/zerion/: client.rs  mapper.rs  mod.rs  model.rs  provider.rs
core/crates/defi/testdata/jupiter/: positions.json
core/crates/defi/testdata/zerion/: positions.json  positions_pool.json
core/crates/gem_keystore/: Cargo.toml  README.md
core/crates/gem_keystore/benches/: keystore_v4.rs
core/crates/gem_keystore/src/: id.rs  lib.rs  mnemonic.rs  testkit.rs  v3_testkit.rs
core/crates/gem_keystore/src/storage/: constants.rs  crypto.rs  file_keystore.rs  format.rs  queue.rs  testkit.rs  types.rs
core/crates/gem_keystore/src/storage/tests/: testkit.rs  v3.rs  v4.rs
core/crates/gem_keystore/src/v3/: constants.rs  crypto.rs  deserialize.rs  mod.rs  reader.rs  tests.rs  types.rs
core/crates/gem_keystore/testdata/: v3_empty_salt_mnemonic.json
core/crates/gem_tron/: Cargo.toml
core/crates/gem_tron/src/: lib.rs  trc20.rs
core/crates/gem_tron/src/address/: mod.rs
core/crates/gem_tron/src/models/: contract.rs  mod.rs
core/crates/gem_tron/src/provider/: preload.rs  preload_mapper.rs  staking.rs  staking_mapper.rs  testkit.rs  transaction_state.rs  transaction_state_mapper.rs  transactions.rs
core/crates/gem_tron/src/rpc/: client.rs
core/crates/gem_tron/src/rpc/trongrid/: client.rs  mapper.rs
core/crates/gem_tron/src/signer/: chain_signer.rs  transaction.rs
core/crates/gem_tron/testdata/: transactions_by_address.json  transactions_by_address_receipts.json  trigger_constant_contract_failed.json  trigger_constant_contract_with_penalty.json
core/crates/support/: Cargo.toml
core/crates/support/src/: chatwoot.rs  client.rs  constants.rs  lib.rs  model.rs  text.rs
core/crates/support/tests/: model_tests.rs
core/crates/support/tests/testdata/: chatwoot_conversation_typing_on.json
core/docs/: DEVICE_AUTHENTICATION.md  KEYSTORE_V4.md  WALLET_AUTHENTICATION.md
core/gemstone/: Cargo.toml  justfile
core/scripts/: dump_v4_keystore.py  free_disk_space.sh
core/skills/: tests.md
docs/: android-reproducible-builds.md
ios/: .gitignore  justfile
ios/Gem/: App.swift
ios/Gem.xcodeproj/: project.pbxproj
ios/GemTests/: unit_frameworks.xctestplan
ios/scripts/: generate-stone.sh
ios/skills/: core-integration.md  development-commands.md  setup.md  testing.md  troubleshooting.md
localization/InfoPlist/: en.ftl
localization/app/: ar.ftl  bn.ftl  cs.ftl  da.ftl  de.ftl  en.ftl  es.ftl  fa.ftl  fil.ftl  fr.ftl  ha.ftl  he.ftl  hi.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  ms.ftl  nl.ftl  pl.ftl  pt-BR.ftl  ro.ftl  ru.ftl  sw.ftl  th.ftl  tr.ftl  uk.ftl  ur.ftl  vi.ftl  zh-Hans.ftl  zh-Hant.ftl
localization/widget/: ha.ftl
scripts/: bump.sh
skills/: code-review.md  cross-platform-awareness.md  decisions.md  development-commands.md  engineering-principles.md  localization.md  new-feature-workflow.md  quality-checks.md  security.md  testing-maestro.md
(+1584 files in other folders)
