[package]
name = "defi"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
number_formatter = { path = "../number_formatter" }
primitives = { path = "../primitives" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { path = "../storage" }
