[package]
name = "gem_tron"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
hex = { workspace = true }
primitives = { path = "../primitives" }
signer = { path = "../signer", optional = true }
gem_encoding = { path = "../gem_encoding", features = ["protobuf"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_serializers = { path = "../serde_serializers", optional = true }
strum = { workspace = true }

# RPC specific dependencies (optional)
chrono = { workspace = true, features = ["serde"], optional = true }
num-bigint = { workspace = true, optional = true }
number_formatter = { path = "../number_formatter", optional = true }
gem_evm = { path = "../gem_evm", optional = true }
gem_client = { path = "../gem_client", optional = true }
chain_traits = { path = "../chain_traits", optional = true }
gem_hash = { path = "../gem_hash", optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = ["rpc"]
signer = [
    "dep:gem_encoding",
    "dep:gem_hash",
    "dep:num-bigint",
    "dep:serde_serializers",
    "dep:signer",
]
rpc = [
    "dep:chrono",
    "dep:num-bigint",
    "dep:number_formatter",
    "dep:gem_evm",
    "dep:gem_client",
    "dep:chain_traits",
    "dep:async-trait",
    "dep:futures",
]
reqwest = ["gem_client/reqwest"]
chain_integration_tests = ["rpc", "reqwest", "primitives/testkit", "settings/testkit"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
reqwest = { workspace = true }
primitives = { path = "../primitives", features = ["testkit"] }
gem_client = { path = "../gem_client", features = ["reqwest", "testkit"] }
settings = { path = "../settings", features = ["testkit"] }
