[package]
name = "support"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
cacher = { path = "../cacher" }
localizer = { path = "../localizer" }
primitives = { path = "../primitives" }
storage = { path = "../storage" }
streamer = { path = "../streamer" }

[dev-dependencies]
primitives = { path = "../primitives", features = ["testkit"] }
